--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
     <header class="header">
         <h1>TIC-TAC-TOE</h1>
+        <div class="pick-sign">
+            <button type="button" class="btn sign">X</button>
+            <button type="button" class="btn sign">O</button>
+        </div>
     </header>
 
-    <div class="pick-sign">
-        <button type="button" class="btn sign">X</button>
-        <button type="button" class="btn sign">O</button>
-    </div>
 
     <main class="main">
         <div class="wrapper">
