Added styles and semantic meaning

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Tic-Tac-Toe</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
         <h1>TIC-TAC-TOE</h1>
-        <div class="pick-sign">
-            <button type="button" class="btn sign">X</button>
-            <button type="button" class="btn sign">O</button>
+        <div class="start-info">
+            <h3>Player X makes the first move...</h3>
         </div>
     </header>
 
@@ -29,6 +29,7 @@
                 <div class="field" data-index="7"></div>
                 <div class="field" data-index="8"></div>
             </div>
+            <button type="button" class="restart">RE-START</button>
         </div>
     </main>
     
